Закончил главную страницу(планшетная версия)

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <section class="features-list__item">
             <h2 class="features-list__title">Поднимает настроение</h2>
             <div class="features-list__text">
-              <p>Приложение позволит вам победить осеннюю хандру и&nbsp;деперессию буквально в&nbsp;несколько кликов!</p>
+              <p>Приложение позволит вам победить осеннюю хандру и&nbsp;деперессию буквально в несколько кликов!</p>
             </div>
           </section>
           <section class="features-list__item">
             <h2 class="features-list__title">Меняет мир вокруг</h2>
             <div class="features-list__text">
-              <p>Сделайте снимок и&nbsp;украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              <p>Сделайте снимок и&nbsp;украсьте его смайликом или текстовой подписью, чтобы <span>усилить эффект</span></p>
             </div>
           </section>
           <section class="features-list__item">
@@ -150,7 +150,7 @@
             <div class="slider__slide">
               <table class="versions-table" border="1">
                 <tr class="versions-table__header-row">
-                  <th class="versions-table__header-cell  versions-table__header-cell--marker">
+                  <th class="versions-table__header-cell  versions-table__header-cell--first">
                   </th>
                   <th class="versions-table__header-cell">
                     <span>База</span>
@@ -166,7 +166,9 @@
                   </th>
                 </tr>
                 <tr class="versions-table__data-row">
-                  <td class="versions-table__data-cell">Розовый фильтр</td>
+                  <td class="versions-table__data-cell  versions-table__data-cell--first">
+                    <span>Розовый фильтр</span>
+                  </td>
                   <td class="versions-table__data-cell">
                     <span>Розовый фильтр</span>
                     <span>+</span>
@@ -181,7 +183,9 @@
                   </td>
                 </tr>
                 <tr class="versions-table__data-row">
-                  <td class="versions-table__data-cell">Смайлики</td>
+                  <td class="versions-table__data-cell  versions-table__data-cell--first">
+                    <span>Смайлики</span>
+                  </td>
                   <td class="versions-table__data-cell  versions-table__data-cell--no">
                     <span>Смайлики</span>
                     <span>-</span>
@@ -196,7 +200,9 @@
                   </td>
                 </tr>
                 <tr class="versions-table__data-row">
-                  <td class="versions-table__data-cell">Комментарии</td>
+                  <td class="versions-table__data-cell  versions-table__data-cell--first">
+                    <span>Комментарии</span>
+                  </td>
                   <td class="versions-table__data-cell  versions-table__data-cell--no">
                     <span>Комментарии</span>
                     <span>-</span>
@@ -247,7 +253,7 @@
         </div>
       </div>
     </main>
-    <footer class="page-footer  page-footer--index">
+    <footer class="page-footer  page-footer--index-page">
       <div class="page-footer__wrapper">
         <div class="page-footer__container">
           <a class="logo  logo--blue">Pink</a>
