Закончил главную страницу

--- a/form.html
+++ b/form.html
@@ -191,7 +191,7 @@
       </div>
     </footer>
 
-    <div class="popup  popup--wrong">
+    <div class="popup  popup--wrong  popup--hidden">
       <div class="popup__wrapper">
         <div class="popup__title">
           <nobr>Что-то</nobr> пошло не&nbsp;так!
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-    <div class="popup  popup--success">
+    <div class="popup  popup--success  popup--hidden">
       <div class="popup__wrapper">
         <div class="popup__title">
           Ваша заявка отправлена
