--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
       </div>
       <div class="features-list">
         <div class="features-list__wrapper">
-          <section class="features-list__item">
+          <section class="features-list__item  features-list__item--first">
             <h2 class="features-list__title">Поднимает настроение</h2>
             <div class="features-list__text">
               <p>Приложение позволит вам победить осеннюю хандру и&nbsp;деперессию буквально в несколько кликов!</p>
             </div>
           </section>
-          <section class="features-list__item">
+          <section class="features-list__item  features-list__item--second">
             <h2 class="features-list__title">Меняет мир вокруг</h2>
             <div class="features-list__text">
-              <p>Сделайте снимок и&nbsp;украсьте его смайликом или текстовой подписью, чтобы <span>усилить эффект</span></p>
+              <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы <span>усилить эффект</span></p>
             </div>
           </section>
-          <section class="features-list__item">
+          <section class="features-list__item  features-list__item--third">
             <h2 class="features-list__title">Заводит новых друзей</h2>
             <div class="features-list__text">
               <p>Ставьте лайки, комментируте, делитесь фотографиями с&nbsp;друзьями и&nbsp;заводите новых</p>
@@ -86,7 +86,7 @@
         <div class="research__wrapper">
           <h2 class="research__title">Эффект на&nbsp;24 часа!</h2>
           <div class="research__text">
-            <p>Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
+            <p>Британские ученые провели исследования и&nbsp;доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           </div>
           <a href="#" class="research__link">Узнать больше об&nbsp;исследовании</a>
         </div>
