Завершил работу с графикой

--- a/form.html
+++ b/form.html
@@ -111,14 +111,14 @@
                   </legend>
                 </div>
                 <div class="form__fields">
-                  <div class="form__entry-field">
+                  <div class="form__entry-field  form__entry-field--phone">
                     <label class="form__label" for="phone-number">
                       <span>Номерок телефончика</span>
                       <span>Номер телефона</span>
                     </label>
                     <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
                   </div>
-                  <div class="form__entry-field">
+                  <div class="form__entry-field  form__entry-field--mail">
                     <label class="form__label" for="email">
                       <span>Адресок почты</span>
                       <span>Адрес почты</span>
