Исправил шрифты и ошибки, найденые валидатором

--- a/form.html
+++ b/form.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pink</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="wrapper">
@@ -27,7 +26,7 @@
             <a class="main-nav__link" href="#">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/"><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -70,7 +69,8 @@
             <div class="form__wrapper">
               <div class="form__border-wrapper">
                 <div class="form__title-wrapper">
-                  <legend class="form__group-title">Ваши безбашенные достижения в&nbsp;путешествии</legend>
+                  <h2 class="form__group-title">
+                  Ваши безбашенные достижения в&nbsp;путешествии</h2>
                 </div>
                 <div class="form__fields">
 
@@ -106,9 +106,9 @@
             <div class="form__wrapper">
               <div class="form__border-wrapper">
                 <div class="form__title-wrapper">
-                  <legend class="form__group-title  form__group-title--hidden">
+                  <h2 class="form__group-title  form__group-title--hidden">
                     Контактная информация
-                  </legend>
+                  </h2>
                 </div>
                 <div class="form__fields">
                   <div class="form__entry-field  form__entry-field--phone">
@@ -133,7 +133,7 @@
             <div class="form__wrapper">
               <div class="form__border-wrapper">
                 <div class="form__title-wrapper">
-                  <legend class="form__group-title">С&nbsp;каким приложением путешествовали?</legend>
+                  <h2 class="form__group-title">С&nbsp;каким приложением путешествовали?</h2>
                 </div>
                 <div class="form__fields">
                   <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
@@ -156,9 +156,9 @@
             <div class="form__wrapper">
               <div class="form__border-wrapper">
                 <div class="form__title-wrapper">
-                  <legend class="form__group-title">
+                  <h2 class="form__group-title">
                     Опишите свои эмоции
-                  </legend>
+                  </h2>
                 </div>
                 <div class="form__entry-field  form__entry-field--textarea">
                   <textarea class="form__field" name="coment" id="comment-field" placeholder="Можно прям в красках, не стесняясь в выражениях" ></textarea>
@@ -186,7 +186,7 @@
             <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
           </div>
           <div class="page-footer__copyright">
-            <a class="page-footer__copyright-link" href="#">Разработано <span><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</span></a>
+            <a class="page-footer__copyright-link" href="#">Разработано <span>HTML Academy</span></a>
           </div>
         </div>
       </div>
@@ -195,7 +195,7 @@
     <div class="popup  popup--wrong  popup--hidden">
       <div class="popup__wrapper">
         <div class="popup__title">
-          <nobr>Что-то</nobr> пошло не&nbsp;так!
+          Что-то пошло не&nbsp;так!
         </div>
         <div class="popup__description">
           <p>Проверьте поля, выделенные красным, скорее всего вы&nbsp;забыли их&nbsp;заполнить</p>
