--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pink</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="wrapper">
@@ -27,7 +26,7 @@
             <a class="main-nav__link" href="#">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/"><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -224,7 +223,7 @@
                   <span class="photo-post__publication-time">(40 часов назад)</span>
                 </h2>
                 <div class="photo-post__post-text">
-                  <p>Где <nobr>снег-то</nobr>?</p>
+                  <p>Где снег-то?</p>
                 </div>
               </div>
               <div class="like-field">
@@ -332,7 +331,7 @@
         <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
       </div>
       <div class="page-footer__copyright">
-        <a class="page-footer__copyright-link" href="#">Разработано <span><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</span></a>
+        <a class="page-footer__copyright-link" href="#">Разработано <span>HTML Academy</span></a>
       </div>
     </div>
   </div>
