--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pink</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="wrapper">
@@ -27,7 +26,7 @@
             <a class="main-nav__link" href="#">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/"><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -105,7 +104,7 @@
                   <span class="comment__author-information">25 лет, водитель трамвая</span>
                 </h2>
                 <blockquote class="comment__text">
-                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
+                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило по-новому взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
                 </blockquote>
               </section>
             </div>
@@ -116,7 +115,7 @@
                   <span class="comment__author-information">25 лет, водитель трамвая</span>
                 </h2>
                 <blockquote class="comment__text">
-                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
+                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило по-новому взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
                 </blockquote>
               </section>
             </div>
@@ -127,7 +126,7 @@
                   <span class="comment__author-information">25 лет, водитель трамвая</span>
                 </h2>
                 <blockquote class="comment__text">
-                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило <nobr>по-новому</nobr> взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
+                  <p><span>&laquo;</span>Это приложение перевернуло мой мир и&nbsp;позволило по-новому взглянуть на привычные серые вещи! А&nbsp;еще я познакомился со&nbsp;своей будущей женой в комментариях к&nbsp;выложенной фотографии!<span>&raquo;</span></p>
                 </blockquote>
               </section>
             </div>
@@ -149,7 +148,7 @@
             <input class="slider__switcher-input  slider__switcher-input--second" type="radio" id="table-slider-btn-2" name="table-slider-toggle" checked>
             <input class="slider__switcher-input  slider__switcher-input--third" type="radio" id="table-slider-btn-3" name="table-slider-toggle">
             <div class="slider__slide">
-              <table class="versions-table" border="1">
+              <table class="versions-table">
                 <tr class="versions-table__header-row">
                   <th class="versions-table__header-cell  versions-table__header-cell--first">
                   </th>
@@ -237,7 +236,7 @@
           <div class="contacts-block__contacts">
             <div class="contacts-block__contact">
               <span class="contacts-block__contact-title">Звоните:</span>
-              <a class="contacts-block__contact-address" href="tel:+78125556666"><nobr>+7 (812) 555-66-66</nobr></a>
+              <a class="contacts-block__contact-address" href="tel:+78125556666">+7 (812) 555-66-66</a>
             </div>
             <div class="contacts-block__contact">
               <span class="contacts-block__contact-title">Пишите:</span>
@@ -250,7 +249,7 @@
           </div>
         </div>
         <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d840.3751722293583!2d30.320843466741838!3d59.936120064599706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f879780b7%3A0x267b6b7f4f614fb9!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDMxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1457108867986" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d840.3751722293583!2d30.320843466741838!3d59.936120064599706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310f879780b7%3A0x267b6b7f4f614fb9!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDMxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1457108867986" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </main>
@@ -264,7 +263,7 @@
             <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
           </div>
           <div class="page-footer__copyright">
-            <a class="page-footer__copyright-link" href="#">Разработано <span><acronym title="HyperText Markup Language" lang="en">HTML</acronym> Academy</span></a>
+            <a class="page-footer__copyright-link" href="#">Разработано <span>HTML Academy</span></a>
           </div>
         </div>
       </div>
