Поправил цвета кнопок фильтра и чекбоксов

--- a/photo.html
+++ b/photo.html
@@ -293,7 +293,7 @@
       <div class="post-photo__right-container">
         <div class="post-photo__filter">
           <div class="post-photo__filter-buttons">
-            <button class="post-photo__filter-button  post-photo__filter-button--filter1 filter-block__filter1--active">Фильтр1</button>
+            <button class="post-photo__filter-button  post-photo__filter-button--filter1-active">Фильтр1</button>
             <button class="post-photo__filter-button  post-photo__filter-button--filter2">Фильтр2</button>
             <button class="post-photo__filter-button  post-photo__filter-button--filter3">Фильтр3</button>
           </div>
