Добавил оформление по stylegude(не закончено), добавил svg спрайт

--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,14 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <svg style="display:none">
+    <symbol viewBox="0 0 49.945 24.007" id="icon-menu-burger"><title>icon-menu-burger</title><path d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/><path d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/></symbol>
+    <symbol viewBox="0 0 23.867 23.867" id="icon-menu-cross"><title>icon-menu-cross</title><path d="M15.087 11.933l8.56-8.559a.75.75 0 0 0 0-1.061L21.554.22a.747.747 0 0 0-1.06 0l-8.561 8.56L3.373.22a.771.771 0 0 0-1.061 0L.22 2.313a.75.75 0 0 0 0 1.061l8.56 8.559-8.56 8.559a.751.751 0 0 0 0 1.062l2.093 2.094a.744.744 0 0 0 1.06 0l8.561-8.56 8.56 8.56a.746.746 0 0 0 1.06 0l2.093-2.094a.751.751 0 0 0 0-1.062l-8.56-8.559z"/></symbol>
+    <symbol viewBox="0 0 26.943 34.09" id="logo-htmlacademy"><title>logo-htmlacademy</title><path d="M13.62.017L13.472 0 0 1.412v24.661l13.472 8.017 13.43-7.99.042-.026V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.547-1.212 11.547 1.212v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.013 1.415 5.904 3.513-.86.507-5.031-2.992-.013 1.415 3.827 2.275-.782.523-3.032-1.787-.013 1.413 1.852 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.015 1.044-7.941-4.728-.015 1.416 7.979 4.796.017 1.076-7.972-4.741-.013 1.415 8.021 4.821.045.026 8.143-4.872v-1.268l-.011-.148v-3.761l3.415-2.036v10.02L13.472 31.85 1.925 24.979v-9.852z"/></symbol>
+  </svg>
+
 	<div class="wrapper">
+    <!-- page-header--open используется для перевода меню в открытое состояние  -->
     <header class="page-header  page-header--open">
       <div class="page-header__wrapper">
         <a class="logo" href="index.html">
@@ -19,7 +26,9 @@
             <img alt="Pink" src="/img/logo-pink-white-mobile.svg">
           </picture>
         </a>
-        <button class="page-header__toggle-menu" type="button"><span>Меню</span>
+        <button class="page-header__toggle-menu" type="button">
+          <svg class="page-header__toggle-icon"  width="50" height="25"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-burger"></use></svg>
+          <svg class="page-header__toggle-icon  page-header__toggle-icon--cross" width="23" height="23"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-cross"></use></svg>
         </button>
       </div>
       <nav class="main-nav">
@@ -345,7 +354,10 @@
         <a class="social-links__btn social-links__btn--you-tube" href="#">YouTube</a>
       </div>
       <div class="page-footer__copyright">
-        <a class="page-footer__copyright-link" href="#">Разработано <span>HTML Academy</span></a>
+        <a class="page-footer__copyright-link" href="#">
+          Разработано <span>HTML Academy</span>
+          <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
+        </a>
       </div>
     </div>
   </div>
